# gemini-predict

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/client/: all_predict.py  post.py  predict.py  win5.py
src/lib/: model.py  slack.py
src/server/: main.py
src/server/lib/: gemini_predict.py  model.py
